src/test/deca/context/valid/test_condition.deca
// Description:
//    condition valide
//
// Resultats:
//    aucune erreur
//
// Historique:
//    cree le 08/01/2023

{
    boolean p; int i=0;
    p=(i==0);
}
