src/test/deca/context/invalid/declarationErronee.deca
// Description:
//    decalaration erronee
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023


{
	a = 3;
}
